--- a/web-doanit/package.json
+++ b/web-doanit/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.6.2",
     "bootstrap": "^5.3.2",
     "date-fns": "^2.30.0",
     "firebase": "^10.7.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4",
-    "yup": "^1.3.2"
+    "yup": "^1.3.2",
+    "bootstrap-icons": "^1.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
