--- a/web-doanit/package.json
+++ b/web-doanit/package.json
@@ -50,6 +50,7 @@
     "axios": "^1.6.2",
     "formik": "^2.4.5",
     "react-router-dom": "^6.20.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "scrollreveal": "^4.0.9"
   }
 }
